--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,45 @@ a {
     margin: 0 ;
     width: 1352px;
 }
+
+/*NAWIGACJA plus logo*/
+
+.header {
+    height: 70px;
+    box-shadow: 0px 3px 6px #00000029;
+}
+
+.header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+.logo {
+    font-size: 32px;
+    font-family: var(--font-raleway);
+    font-weight: 300;
+    color: var(--color-primary);
+}
+.header__nav {
+    display: flex;
+}
+.nav__link {
+    color: var(--color-grey);
+    font-size: 11px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 28px 18px 26px;
+    border-bottom: 3px solid transparent;
+    letter-spacing: 3.28px;
+}
+.nav__link:hover {
+    color: var(--color-black);
+    border-color: var(--color-primary);
+}
+.nav__element {
+    padding: 0 26px;
+}
+.nav__element:last-child {
+    padding-right: 136px;
+}
