--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,67 @@ a {
 .banner__img {
     width: 100%;
 }
+
+/*sekcja statystyki*/
+
+.stat {
+    margin-top: 100px;
+}
+.stat__box {
+    display: flex;
+    justify-content: space-between;
+    max-width: 800px;
+    margin: 100px auto 120px;
+}
+h2 {
+    font-size: 36px;
+    font-family: var(--font-raleway);
+    text-align: center;
+}
+.stat__column {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-family: var(--font-raleway);
+    text-align: center;
+    max-width: 116px;
+}
+.stat__circle {
+    border-radius: 50%;
+    height: 63px;
+    width: 63px;
+    position: relative;
+}
+.stat__img {
+    position: absolute;
+}
+.stat__column:nth-child(1) .stat__circle {
+    background-color: var(--color-redish);
+}
+.stat__column:nth-child(2) .stat__circle {
+    background-color: var(--color-primary);
+}
+.stat__column:nth-child(2) .stat__img {
+    top: 15px;
+    left: 31%;
+}
+.stat__column:nth-child(3) .stat__circle {
+    background-color: var(--color-green);
+}
+.stat__column:nth-child(3) .stat__img {
+    top:5px;
+    left: 50%;
+
+}
+.stat__number {
+    font-size: 20px;
+    font-family: var(--font-raleway);
+    font-weight: bold;
+    letter-spacing: 5.96px;
+    margin-top: 10px;
+}
+.stat__description {
+    color: var(--color-grey);
+    margin-top: 10px;
+}
