--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,130 @@ h2 {
     letter-spacing: 5.96px;
     margin-top: 10px;
 }
-.stat__description {
+.stat__text {
     color: var(--color-grey);
     margin-top: 10px;
+}
+
+
+/*sekcja benefits*/
+
+.benefits {
+    padding: 105px 0;
+    background: var(--color-light-grey);
+}
+.benefits container {
+    padding: 0 105px;
+}
+.benefits__box {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    background-color: white;
+    border: 1px solid #E8E9ED;
+    margin-bottom: 37px;
+    border-radius: 5px;
+}
+.benefits__text {
+    margin: 91px 36px;
+    max-width: 400px;
+}
+.benefits__text::after {
+    content: "";
+    width: 330px;
+    height: 4px;
+    background-color: var(--accent-color);
+    display: block;
+    margin-top: 50px;
+}
+.benefits__p {
+    line-height: 22px;
+    margin-top: 30px;
+}
+.benefits__image {
+    position: relative;
+}
+.benefits__image img {
+    position: relative;
+    z-index: 2;
+}
+
+.benefits__box-notebook {
+    --accent-color: var(--color-redish);
+}
+.benefits__box-notebook .benefits__image {
+    margin-right: 117px;
+    margin-bottom: 38px;
+}
+.benefits__box-notebook .benefits__image::before {
+    content: "";
+    width: 180px;
+    height: 180px;
+    background-color: var(--accent-color);
+    display: block;
+    border-radius: 40px;
+    position: absolute;
+    right: 0;
+    top: -40px;
+    transform: rotate(45deg);
+}
+.benefits__box-notebook .benefits__image img {
+    width: 386px;
+    height: auto;
+}
+
+
+.benefits__box--phone {
+    --accent-color: var(--color-primary);
+    flex-direction: row-reverse;
+    padding: 0 20px 0 70px;
+}
+
+.benefits__box--phone .benefits__image::before {
+    content: "";
+    width: 320px;
+    height: 320px;
+    background-color: var(--accent-color);
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: -20px;
+}
+
+.benefits__box--phone .benefits__image img {
+    width: 426px;
+    height: auto;
+}
+
+.benefits__box--phone .benefits__text {
+    margin: 70px 0;
+}
+.benefits__boxes {
+    display: flex;
+    --accent-color: var(--color-green);
+}
+.benefits__boxes > div {
+    margin-bottom: 0;
+}
+.benefits__box-solo {
+    max-width: 623px;
+}
+.benefits__box--solo .benefits__text {
+    margin: 69px 35px;
+}
+.benefits__box--image {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--accent-color);
+    border: none;
+    margin-left: 60px;
+}
+
+.benefits__box--image img {
+    width: 295px;
+    height: auto;
+    margin-top: 55px;
 }
