--- a/css/style.css
+++ b/css/style.css
@@ -294,3 +294,219 @@ h2 {
     height: auto;
     margin-top: 55px;
 }
+
+
+/*sekcja pricing*/
+
+
+.pricing {
+    margin: 100px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.pricing__boxes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+.pricing__box {
+    width: 372px;
+    border-radius: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid var(--accent-color);
+}
+.pricing__details {
+    margin-top: 34px;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.pricing__name {
+    font-family: var(--font-raleway);
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+.pricing__price {
+    font-family: var(--font-open-sans);
+    font-size: 2.875rem;
+    color:var(--accent-color);
+    font-weight: 300;
+    margin-top: 25px;
+}
+.pricing__limited {
+    text-align: center;
+    font-family: var(--font-raleway);
+    font-weight: 700;
+    margin-top: 15px;
+    font-size: 0.75rem;
+}.pricing__items {
+    text-align: center;
+ }
+ .pricing__item {
+     font-size: 14px;
+     margin-bottom: 20px;
+ }
+.pricing__item::before {
+    content: "";
+    width: 11px;
+    height: 11px;
+    display: inline-block;
+    margin-right: 10px;
+    background-image: url("../assets/Ckechmark-1.svg");
+}
+
+.pricing__item--not::before {
+    background-image: url("../assets/Close.svg");
+}
+.pricing__box .btn {
+    position: relative;
+    background-color: var(--accent-color);
+    font-size: 0.8125rem;
+    bottom: -25px;
+    border: none;
+}
+.pricing__box--basic {
+    --accent-color: var(--color-redish);
+}
+
+.pricing__box--basic .pricing__price {
+    margin-bottom: 30px;
+}
+.pricing__box--professional {
+    width: 405px;
+    --accent-color: var(--color-primary);
+    margin: 0 40px;
+    box-shadow: 5px 10px 27px var(--color-primary-shadow);
+}
+.pricing__box--professional .pricing__type {
+    font-size: 1.3125rem;
+}
+.pricing__box--professional .pricing__item {
+    margin-bottom: 25px;
+}
+.pricing__box--premium {
+    --accent-color: var(--color-green);
+}
+
+
+/*sekcja kontakt z email*/
+
+
+.contact {
+    display: flex;
+    justify-content: center;
+    padding: 80px 100px 100px;
+}
+.contact__column {
+    width: 50%;
+}
+.contact__title {
+    font-size:3.0625rem;
+    line-height: 57px;
+}
+.contact__text {
+    margin:22px 0 42px;
+    font-size: 1rem;
+    line-height: 1.375rem;
+    text-align: center;
+}
+
+.contact__details {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-grey);
+
+}
+.details__item {
+    text-decoration: none;
+    color: var(--color-grey);
+    font-weight: 500;
+}
+.details__item:first-child {
+    margin-right: 20px;
+}
+.details__item img {
+    margin-right:10px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form__field {
+    display: flex;
+    flex-direction: column;
+}
+.form__field:first-of-type {
+    margin-bottom: 42px;
+}
+.form__label {
+    font-weight: bold;
+    color: var(--color-primary);
+    text-transform: uppercase;
+    font-size: 0.6875rem;
+    line-height: 15px;
+    letter-spacing: 3.28px;
+}
+.input {
+    border: none;
+    border-bottom: 1px solid var(--color-grey);
+    background: transparent;
+    line-height: 2.625rem;
+}
+.form__checkbox {
+        display: block;
+        position: relative;
+        cursor: pointer;
+        font-size: 1.375rem;
+        padding-left: 35px;
+        margin-bottom: 12px;
+}
+.form__checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.form__checkbox .checkbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: white;
+    border: 1px solid var(--color-grey);
+    border-radius: 4px;
+}
+
+.form__checkbox input:checked ~ .checkbox {
+    background-image: url(/assets/Ckechmark-1.svg);
+    background-position: center;
+    background-size: 50%;
+    background-repeat: no-repeat;
+}
+.form__checkbox .agreement__text {
+    margin: 0 10px;
+    font-size: 0.75rem;
+    color: var(--color-grey);
+    line-height: 17px;
+}
+
+.form .btn {
+    font-size: 0.8125rem;
+    padding: 20px 97px;
+    align-self: flex-end;
+    margin-top: 20px;
+}
+.form__agreement {
+    margin-top: 30px;
+}
